--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@vaadin/router": "^1.7.5",
-    "algoliasearch": "^5.19.0",
+    "algoliasearch": "4.x.x",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
