--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
+    "dropzone": "^6.0.0-beta.2",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "nodemon": "^3.1.7",
     "parcel": "^2.12.0",
     "pg": "^8.13.1",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/leaflet": "^1.9.16",
     "@types/pg": "^8.11.10",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
