--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.10.2",
     "@vaadin/router": "^1.7.5",
     "algoliasearch": "4.x.x",
+    "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dropzone": "^5.7.9",
     "@types/leaflet": "^1.9.16",
     "@types/pg": "^8.11.10",
     "buffer": "^6.0.3",
