--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev:fe": "parcel serve ./fe-src/index.html",
     "dev:be": "nodemon --watch ./be-src/index.ts --exec ts-node ./be-src/index.ts",
-    "alg": "nodemon --watch ./be-src/models/connection.ts --exec ts-node ./be-src/models/connection.ts",
     "build:fe": "parcel build ./fe-src/index.html --dist-dir ./dist",
     "build:be": "tsc",
-    "build": "npm run build:fe && npm run build:be"
+    "build": "npm run build:fe && npm run build:be",
+    "start": "node ./dist/index.js"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
