--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node ./be-dist/index.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
